fix video index spacing

--- a/app/assets/stylesheets/video_list.css
+++ b/app/assets/stylesheets/video_list.css
@@ -1,6 +1,6 @@
 .video-index {
   width: 100%;
-  max-width: 1285px;
+  max-width: 1365px;
   margin: auto;
   height: 100vh;
   padding: 0 40px;
